// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET request in production resolves URL with query string and token 1`] = `
Object {
  "hint": "this is a mocked response",
  "options": Object {
    "headers": Object {
      "Content-Type": "application/json",
      "X-Client": "graphql",
    },
    "method": "GET",
  },
  "url": "https://path/to/api?locale=en&token=randomToken",
}
`;

exports[`GET request in production resolves URL with token 1`] = `
Object {
  "hint": "this is a mocked response",
  "options": Object {
    "headers": Object {
      "Content-Type": "application/json",
      "X-Client": "graphql",
    },
    "method": "GET",
  },
  "url": "https://path/to/api?token=t%2Fok%22en",
}
`;

exports[`GET request in production resolves URL without token 1`] = `
Object {
  "hint": "this is a mocked response",
  "options": Object {
    "headers": Object {
      "Content-Type": "application/json",
      "X-Client": "graphql",
    },
    "method": "GET",
  },
  "url": "https://path/to/api",
}
`;

exports[`GET request in production throws exception during invalid return status code 1`] = `
Object {
  "_proxy": Object {
    "statusCode": "500",
    "url": "https://path/to/api?status=500",
  },
  "extensions": Object {
    "proxy": Object {
      "statusCode": "500",
      "url": "https://path/to/api?status=500",
    },
  },
}
`;

exports[`POST request in production adds default content type header 1`] = `
Object {
  "hint": "this is a mocked response",
  "options": Object {
    "body": "{}",
    "headers": Object {
      "Content-Type": "application/json",
      "X-Client": "graphql",
    },
    "method": "POST",
  },
  "url": "https://path/to/api",
}
`;

exports[`POST request in production stringify payload 1`] = `
Object {
  "hint": "this is a mocked response",
  "options": Object {
    "body": "{\\"email\\":\\"john@example.com\\",\\"password\\":123456}",
    "headers": Object {
      "Content-Type": "application/json",
      "X-Client": "graphql",
    },
    "method": "POST",
  },
  "url": "https://path/to/api",
}
`;

exports[`POST request in production supports custom content type header 1`] = `
Object {
  "hint": "this is a mocked response",
  "options": Object {
    "body": "{}",
    "headers": Object {
      "Content-Type": "application/soap+xml",
      "X-Client": "graphql",
    },
    "method": "POST",
  },
  "url": "https://path/to/api",
}
`;

exports[`POST request in production supports custom headers 1`] = `
Object {
  "hint": "this is a mocked response",
  "options": Object {
    "body": "{}",
    "headers": Object {
      "Content-Type": "application/soap+xml",
      "X-Client": "graphql",
      "X-Custom-A": "Value A",
      "X-Custom-B": "Value B",
    },
    "method": "POST",
  },
  "url": "https://path/to/api",
}
`;

exports[`POST request in production throws exception during invalid return status code 1`] = `
Object {
  "_proxy": Object {
    "statusCode": "500",
    "url": "https://path/to/api?status=500",
  },
  "extensions": Object {
    "proxy": Object {
      "statusCode": "500",
      "url": "https://path/to/api?status=500",
    },
  },
}
`;
